

Name: Segue Change Log



v. 2.0.0-beta-5 (2007-11-29)
----------------------------------------------------
This release includes a new hierarchical authorization-setting user interface that
allows for the designation of roles to any user or group anywhere in the site
hierarchy. 
		
		
	* New feature: #1828372 
		Permissions: New Hierarchical role-setting UI that can set roles for any
		user or group across the entire site.
		(2007-11-15 - Adam Franco)
		
	* Bug Fix: #1831176 
		UI1: Fixed an issue where Header/Footer sensing was inappropriately thinking
		that a cell was a footer when it contained a nav-target rather than a nav
		item. This was leading to an uncaught exception in Classic Mode.
		(2007-11-14 - Adam Franco)
		
	* Change: #1831176 
		SiteRendering: Improved the debugging output to help solve an issue.
		(2007-11-13 - Adam Franco)
		
	* Bug Fix: #1831322 
		UI2: Arrange-mode no longer asks for confirmation before moving items.
		(2007-11-13 - Adam Franco)
	
v. 2.0.0-beta-4 (2007-11-13)
----------------------------------------------------
This release fixes an installer bug that was preventing fresh installs from
completing. It also fixes some ArrangeMode bugs that were allowing Menus and
MenuItems to be dragged to invalid places.

This release uses Harmoni 0.13.4 and Polyphony 0.10.3.
		
		
	* Bug Fix: 
		UI2: Menu Items are now filtered from being droped on their own cells,
		preventing inadvertent nudges from triggering 'do you want to move' prompts.
		(2007-11-13 - Adam Franco)
		
	* Bug Fix: #1830622 
		UI2: Menus now are not draggable to content organizers.
		
		The issue was an comparrison between a string id and an integer id was
		improperly evaluating to true.
		(2007-11-13 - Adam Franco)
		
	* Bug Fix: #1819565 
		Installer: Moved install script to segue/main/install/ since it isn't really
		end-user modifiable.
		(2007-11-12 - Adam Franco)
		
	* Bug Fix: 
		Installer: Now makes authorization service available before install-process