@@ -25,7 +25,9 @@
 <h1>Segue Change Log</h1>
 <h2>Version 2.0.0-beta-5</h2>
 <h3>2007-11-29</h3>
-<p>This release includes a new hierarchical authorization-setting user interface that allows for the designation of roles to any user or group anywhere in the site hierarchy.</p>
+<p>This release includes a new hierarchical authorization-setting user interface that allows for the designation of roles to any user or group anywhere in the site hierarchy.
+<br>
+<br>This release uses Harmoni 0.13.4 and Polyphony 0.10.4.</p>
 <ul>
 		
 		<li>
